<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/backgroun"
    android:padding="@dimen/mod_activity_padding"
    tools:context=".compilerActivity">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/java"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="serif-monospace"
        android:id="@+id/java"
        android:padding="@dimen/aboutFragmentPadding"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/c"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="serif-monospace"
        android:id="@+id/c"
        android:padding="@dimen/aboutFragmentPadding"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/cpp"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="serif-monospace"
        android:id="@+id/cpp"
        android:padding="@dimen/aboutFragmentPadding"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/python"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="serif-monospace"
        android:id="@+id/python"
        android:padding="@dimen/aboutFragmentPadding"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_width="match_parent"
        android:text="@string/javascrip"
        android:textSize="30sp"
        android:gravity="center"
        android:fontFamily="serif-monospace"
        android:id="@+id/javascript"
        android:padding="@dimen/aboutFragmentPadding"
        android:layout_height="wrap_content"/>

</LinearLayout>